# scannum

./: .gitignore  GIT_CHEATSHEET_RU.txt  README.md  ScanNum.spec  build_exe.ps1  config.toml  main.py  open_data.cmd  package_release.py  pyproject.toml
docs/: HOME_PROTOTYPE_PLAN.md  PROJECT_ROADMAP.md
src/plate_guard/: __init__.py  admin.py  camera.py  camera_discovery.py  camera_settings.py  cli.py  config.py  consensus.py  exporter.py  gui.py  image_io.py  models.py  plates.py  recognizer.py  rules.py  runtime.py  service.py  storage.py
src/plate_guard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_admin.py  test_camera_settings.py  test_config.py  test_consensus.py  test_exporter.py  test_gui_smoke.py  test_image_io.py  test_plates.py  test_rules.py  test_runtime.py  test_service_workflow.py  test_storage.py
