[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "plate-guard"
version = "0.5.0"
description = "Локальный прототип автоматической фиксации автомобильных номеров"
requires-python = ">=3.12,<3.14"
dependencies = [
    "argon2-cffi>=25.1,<26",
    "fast-alpr[onnx]==0.4.0",
    "openpyxl>=3.1.5,<4",
    "PySide6>=6.8,<7",
    "tzdata>=2025.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9"]

[project.scripts]
plate-guard = "plate_guard.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
